--- a/MegaCOM/res/menu/activity_manager.xml
+++ b/MegaCOM/res/menu/activity_manager.xml
@@ -1,11 +1,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:MEGA="http://schemas.android.com/apk/res-auto" >
     
-    <item android:id="@+id/action_search"
-          android:title="@string/action_search"
-          android:icon="@drawable/ic_menu_action_search"
-          MEGA:showAsAction="ifRoom|collapseActionView"
-          MEGA:actionViewClass="android.support.v7.widget.SearchView" />
+    <item 
+        android:id="@+id/action_search"
+        MEGA:actionViewClass="android.support.v7.widget.SearchView"
+        android:icon="@drawable/ic_menu_action_search"                
+        android:orderInCategory="100"
+        MEGA:showAsAction="ifRoom|collapseActionView"
+        android:title="@string/action_search" />
     
     <item
         android:id="@+id/action_settings"
