--- a/MegaCOM/res/layout/activity_full_screen_image_viewer.xml
+++ b/MegaCOM/res/layout/activity_full_screen_image_viewer.xml
@@ -4,9 +4,15 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <android.support.v4.view.ViewPager
+<!--     <android.support.v4.view.ViewPager
         android:id="@+id/image_viewer_pager"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent" />
+    -->
+    <com.mega.components.ExtendedViewPager 
+	    xmlns:android="http://schemas.android.com/apk/res/android"
+	    android:id="@+id/image_viewer_pager"
+	    android:layout_width="match_parent"
+	    android:layout_height="match_parent" />
 
 </LinearLayout>
