--- a/MegaCOM/res/layout/activity_full_screen_image_viewer.xml
+++ b/MegaCOM/res/layout/activity_full_screen_image_viewer.xml
@@ -1,18 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-<!--     <android.support.v4.view.ViewPager
-        android:id="@+id/image_viewer_pager"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent" />
-    -->
     <com.mega.components.ExtendedViewPager 
-	    xmlns:android="http://schemas.android.com/apk/res/android"
 	    android:id="@+id/image_viewer_pager"
 	    android:layout_width="match_parent"
-	    android:layout_height="match_parent" />
+	    android:layout_height="match_parent" /> 
+    
+<!-- <TextView
+        android:id="@+id/full_screen_image_viewer_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true" />
 
-</LinearLayout>
+    <ImageView
+         android:id="@+id/full_screen_image_close"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:src="@drawable/ic_action_cancel"         
+         android:layout_alignParentTop="true"
+         android:layout_alignParentRight="true"
+         android:paddingTop="15dp"
+         android:paddingRight="15dp" />
+          -->
+</RelativeLayout>
