--- a/MegaCOM/res/layout/fragment_rubbishbinlist.xml
+++ b/MegaCOM/res/layout/fragment_rubbishbinlist.xml
@@ -2,15 +2,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FileBrowserListFragment"
-    android:background="@color/grid_background" >
+    tools:context=".RubbishBinListFragment" >
 
-    <ListView 
-        android:id="@+id/contact_grid_view_browser"
+    <ListView
+        android:id="@+id/rubbishbin_list_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" 
-        android:dividerHeight="0dp"
-		android:divider="@null">
+        android:layout_height="match_parent" >
     </ListView>
 
 </RelativeLayout>
