--- a/MegaCOM/res/layout/item_rubbishbin_grid.xml
+++ b/MegaCOM/res/layout/item_rubbishbin_grid.xml
@@ -1,5 +1,5 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/file_grid_item_complete_layout"
+    android:id="@+id/rubbishbin_grid_item_complete_layout"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:background="@color/grid_background">
@@ -7,7 +7,7 @@
     <RelativeLayout 
         android:layout_width="172dp"
         android:layout_height="wrap_content"
-        android:id="@+id/file_grid_item_layout1"
+        android:id="@+id/rubbishbin_grid_item_layout1"
         android:background="@drawable/background_item_grid"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
@@ -16,7 +16,7 @@
         android:descendantFocusability="blocksDescendants" >
         
         <ImageButton
-	        android:id="@+id/file_grid_thumbnail1"
+	        android:id="@+id/rubbishbin_grid_thumbnail1"
 	        android:layout_width="157dp"
 	        android:layout_height="157dp"
 	        android:layout_centerHorizontal="true"
@@ -24,35 +24,35 @@
 	        android:background="@null" />
         
         <View
-	        android:id="@+id/file_grid_separator1"
+	        android:id="@+id/rubbishbin_grid_separator1"
 	 		android:layout_width="wrap_content"
 	 		android:layout_height="2dp"
 	 		android:background="@color/grid_item_separator"
 	        android:scaleType="fitCenter"
 	        android:layout_marginLeft="6dp"
 	        android:layout_centerHorizontal="true"
-	        android:layout_below="@id/file_grid_thumbnail1"
+	        android:layout_below="@id/rubbishbin_grid_thumbnail1"
 	 		 />
         
         <TextView
-	        android:id="@+id/file_grid_filename1"
+	        android:id="@+id/rubbishbin_grid_filename1"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"	
 	        android:paddingLeft="6dp"
 	        android:paddingTop="3dp"
-	        android:layout_below="@id/file_grid_separator1" />
+	        android:layout_below="@id/rubbishbin_grid_separator1" />
         
         <TextView
-	        android:id="@+id/file_grid_filesize1"
+	        android:id="@+id/rubbishbin_grid_filesize1"
 	        android:layout_width="wrap_content"
 	        android:layout_height="30dp"
 	        android:paddingLeft="6dp"
 	        android:paddingBottom="7dp"
 	        android:textColor="@color/file_list_second_row"
-	        android:layout_below="@id/file_grid_filename1" />
+	        android:layout_below="@id/rubbishbin_grid_filename1" />
         
         <ImageButton 
-	        android:id="@+id/file_list_three_dots1"
+	        android:id="@+id/rubbishbin_list_three_dots1"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:src="@drawable/three_dots_background_white"
@@ -66,11 +66,11 @@
 	        android:layout_alignParentBottom="true"/>
         
         <ImageView
-	        android:id="@+id/file_grid_arrow_selection1"
+	        android:id="@+id/rubbishbin_grid_arrow_selection1"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:src="@drawable/arrow_selection_white_background"
-	        android:layout_below="@id/file_list_three_dots1"
+	        android:layout_below="@id/rubbishbin_list_three_dots1"
 			android:layout_alignParentBottom="true"
 			android:layout_alignParentRight="true"
 			android:paddingRight="14dp" />
@@ -78,10 +78,10 @@
     </RelativeLayout>
     
     <RelativeLayout
-        android:id="@+id/file_grid_options1"
+        android:id="@+id/rubbishbin_grid_options1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/file_grid_item_layout1"
+        android:layout_below="@id/rubbishbin_grid_item_layout1"
         android:background="#222222"
         android:layout_alignParentLeft="true">
         
@@ -91,7 +91,7 @@
             
             <TableRow>
 	            <ImageButton
-		            android:id="@+id/file_grid_option_open1"
+		            android:id="@+id/rubbishbin_grid_option_open1"
 		            android:layout_width="wrap_content"
 		            android:layout_height="wrap_content"
 		            android:src="@drawable/file_list_option_open"
@@ -101,7 +101,7 @@
 		            android:layout_gravity="center_vertical"/>
 	        
 		        <ImageButton
-		            android:id="@+id/file_grid_option_properties1"
+		            android:id="@+id/rubbishbin_grid_option_properties1"
 		            android:layout_width="wrap_content"
 		            android:layout_height="wrap_content"
 		            android:src="@drawable/file_list_option_properties"
@@ -111,7 +111,7 @@
 		            android:layout_gravity="center_vertical"/>
 	        
 		        <ImageButton
-		            android:id="@+id/file_grid_option_download1"
+		            android:id="@+id/rubbishbin_grid_option_download1"
 		            android:layout_width="wrap_content"
 		            android:layout_height="wrap_content"
 		            android:src="@drawable/file_list_option_download"
@@ -121,7 +121,7 @@
 		            android:layout_gravity="center_vertical" />
 	        
 		        <ImageButton
-		            android:id="@+id/file_grid_option_delete1"
+		            android:id="@+id/rubbishbin_grid_option_delete1"
 		            android:layout_width="wrap_content"
 		            android:layout_height="wrap_content"
 		            android:src="@drawable/file_list_option_delete"
@@ -134,7 +134,7 @@
     </RelativeLayout>
     
     <View
-	    android:id="@+id/file_grid_separator_final"
+	    android:id="@+id/rubbishbin_grid_separator_final"
 		android:layout_width="5dp"
 		android:layout_height="0dp"
 		android:background="@null"
@@ -143,15 +143,15 @@
     <RelativeLayout 
         android:layout_width="172dp"
         android:layout_height="wrap_content"
-        android:id="@+id/file_grid_item_layout2"
-        android:layout_toRightOf="@id/file_grid_item_layout2"
+        android:id="@+id/rubbishbin_grid_item_layout2"
+        android:layout_toRightOf="@id/rubbishbin_grid_item_layout2"
         android:background="@drawable/background_item_grid"
-        android:layout_toLeftOf="@id/file_grid_separator_final"
+        android:layout_toLeftOf="@id/rubbishbin_grid_separator_final"
         android:layout_marginTop="5dp"
         android:descendantFocusability="blocksDescendants" >
         
         <ImageButton
-	        android:id="@+id/file_grid_thumbnail2"
+	        android:id="@+id/rubbishbin_grid_thumbnail2"
 	        android:layout_width="157dp"
 	        android:layout_height="157dp"
 	        android:layout_centerHorizontal="true"
@@ -159,34 +159,34 @@
    	        android:background="@null"/>
         
         <View
-	        android:id="@+id/file_grid_separator2"
+	        android:id="@+id/rubbishbin_grid_separator2"
 	 		android:layout_width="wrap_content"
 	 		android:layout_height="2dp"
 	 		android:background="@color/grid_item_separator"
 	        android:scaleType="fitCenter"
 	        android:layout_marginLeft="6dp"
 	        android:layout_centerHorizontal="true"
-	        android:layout_below="@id/file_grid_thumbnail2"/>
+	        android:layout_below="@id/rubbishbin_grid_thumbnail2"/>
         
         <TextView
-	        android:id="@+id/file_grid_filename2"
+	        android:id="@+id/rubbishbin_grid_filename2"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"	
 	        android:paddingLeft="6dp"
 	        android:paddingTop="3dp"
-	        android:layout_below="@id/file_grid_separator2" />
+	        android:layout_below="@id/rubbishbin_grid_separator2" />
         
         <TextView
-	        android:id="@+id/file_grid_filesize2"
+	        android:id="@+id/rubbishbin_grid_filesize2"
 	        android:layout_width="wrap_content"
 	        android:layout_height="30dp"
 	        android:paddingLeft="6dp"
 	        android:paddingBottom="7dp"
 	        android:textColor="@color/file_list_second_row"
-	        android:layout_below="@id/file_grid_filename2" />
+	        android:layout_below="@id/rubbishbin_grid_filename2" />
         
         <ImageButton 
-	        android:id="@+id/file_list_three_dots2"
+	        android:id="@+id/rubbishbin_list_three_dots2"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:src="@drawable/three_dots_background_white"
@@ -200,11 +200,11 @@
 	        android:layout_alignParentBottom="true"/>
         
         <ImageView
-	        android:id="@+id/file_grid_arrow_selection2"
+	        android:id="@+id/rubbishbin_grid_arrow_selection2"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:src="@drawable/arrow_selection_white_background"
-	        android:layout_below="@id/file_list_three_dots2"
+	        android:layout_below="@id/rubbishbin_list_three_dots2"
 			android:layout_alignParentBottom="true"
 			android:layout_alignParentRight="true"
 			android:paddingRight="14dp" />
@@ -212,10 +212,10 @@
     </RelativeLayout>
 
     <RelativeLayout
-        android:id="@+id/file_grid_options2"
+        android:id="@+id/rubbishbin_grid_options2"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/file_grid_item_layout2"
+        android:layout_below="@id/rubbishbin_grid_item_layout2"
         android:background="#222222">
         
         <TableLayout
@@ -224,7 +224,7 @@
             
             <TableRow>
 	            <ImageButton
-		            android:id="@+id/file_grid_option_open2"
+		            android:id="@+id/rubbishbin_grid_option_open2"
 		            android:layout_width="wrap_content"
 		            android:layout_height="wrap_content"
 		            android:src="@drawable/file_list_option_open"
@@ -234,7 +234,7 @@
 		            android:layout_gravity="center_vertical"/>
 	        
 		        <ImageButton
-		            android:id="@+id/file_grid_option_properties2"
+		            android:id="@+id/rubbishbin_grid_option_properties2"
 		            android:layout_width="wrap_content"
 		            android:layout_height="wrap_content"
 		            android:src="@drawable/file_list_option_properties"
@@ -244,7 +244,7 @@
 		            android:layout_gravity="center_vertical"/>
 	        
 		        <ImageButton
-		            android:id="@+id/file_grid_option_download2"
+		            android:id="@+id/rubbishbin_grid_option_download2"
 		            android:layout_width="wrap_content"
 		            android:layout_height="wrap_content"
 		            android:src="@drawable/file_list_option_download"
@@ -254,7 +254,7 @@
 		            android:layout_gravity="center_vertical" />
 	        
 		        <ImageButton
-		            android:id="@+id/file_grid_option_delete2"
+		            android:id="@+id/rubbishbin_grid_option_delete2"
 		            android:layout_width="wrap_content"
 		            android:layout_height="wrap_content"
 		            android:src="@drawable/file_list_option_delete"
