--- a/MegaCOM/res/menu/activity_manager.xml
+++ b/MegaCOM/res/menu/activity_manager.xml
@@ -1,17 +1,27 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:MEGA="http://schemas.android.com/apk/res-auto" >
     
-    <item 
+     <item
+		android:id="@+id/action_search"
+		android:orderInCategory="100"
+		android:title="@string/action_search"
+		android:icon="@drawable/ic_menu_action_search"
+		MEGA:actionViewClass="android.support.v7.widget.SearchView"
+		MEGA:showAsAction="ifRoom|collapseActionView" /> 
+
+
+<!--     <item 
         android:id="@+id/action_search"
         MEGA:actionViewClass="android.support.v7.widget.SearchView"
         android:icon="@drawable/ic_menu_action_search"                
         android:orderInCategory="100"
         MEGA:showAsAction="ifRoom|collapseActionView"
         android:title="@string/action_search" />
-    
+-->
+
     <item
         android:id="@+id/action_settings"
-        android:orderInCategory="100"
+        android:orderInCategory="105"
         android:showAsAction="always"
         android:title="@string/action_settings"
         android:icon="@drawable/ic_launcher"
