--- a/res/layout/activity_full_screen_image_viewer.xml
+++ b/res/layout/activity_full_screen_image_viewer.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:id="@+id/full_image_viewer_parent_layout" >
+    android:id="@+id/full_image_viewer_parent_layout" 
+    android:background="#000000">
 
     <com.mega.components.ExtendedViewPager 
 	    android:id="@+id/image_viewer_pager"
@@ -14,7 +15,7 @@
         android:layout_width="fill_parent"
         android:layout_height="48dp"
         android:id="@+id/image_viewer_layout_bottom"
-        android:background="#55dddddd"
+        android:background="#00000000"
         android:layout_alignParentBottom="true">
            
     </RelativeLayout>
@@ -23,14 +24,14 @@
         android:layout_width="fill_parent"
         android:layout_height="48dp"
         android:id="@+id/image_viewer_layout_top"
-        android:background="#55dddddd"
+        android:background="#00000000"
         android:layout_alignParentTop="true">
         
         <ImageView 
             android:id="@+id/full_image_viewer_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_action_navigation_accept"
+            android:src="@drawable/ic_action_navigation_accept_white"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
             android:layout_marginLeft="10dp"/>
